--- a/static_shared/ngTemplates/productCard.html
+++ b/static_shared/ngTemplates/productCard.html
@@ -9,7 +9,7 @@
     </div>
     <div class="row">
       <div class=" card bg-white" style="padding-bottom:0px;">
-        <div class="row container-fluid" style="padding:10px 20px; ">
+        <div class="row container-fluid" style="padding:10px 20px;height:210px ">
           <!-- <div >
             <h5 ng-if="l.product.name.length>35" style="margin:0px;  height:60px;padding-left:10px">{{l.product.name.slice(0,35)}}...</h5>
             <h5 ng-if="l.product.name.length<=35" style="margin:0px;  height:60px;padding-left:10px">{{l.product.name}}</h5>
