--- a/static_shared/ngTemplates/productCard.html
+++ b/static_shared/ngTemplates/productCard.html
@@ -2,6 +2,13 @@
   <div class="productCardHover" ng-click="openDetails(list.pk,list.product.name.split(' ').join('-'))" style="margin-bottom:15px;margin-left:15px;margin-right:15px">
     <div class="row" class="text-center">
       <span ng-if="list.product.discount>0" style="position:absolute;background-color:green;color:white;padding-right:15px;padding-left:15px; border-radius:15px 15px 15px 15px;margin-top:20px;font-size:14px">{{list.product.discount}}% Off </span>
+
+        <span ng-click="wishlist();$event.stopPropagation();" style="cursor:pointer;color:#808080;position:absolute;padding-right:0px;padding-left:66%; border-radius:15px 15px 15px 15px;margin-top:20px;font-size:14px" ng-if="list.added_saved==0&&me.pk" >
+          <i class="fa fa-heart  fa-2x"></i>
+        </span>
+        <span ng-click="wishlist();$event.stopPropagation();" style="cursor:pointer;color:rgb(228, 114, 114);position:absolute;padding-right:0px;padding-left:66%; border-radius:15px 15px 15px 15px;margin-top:20px;font-size:14px" ng-if="list.added_saved>0&&me.pk">
+          <i class="fa fa-heart  fa-2x"></i>
+        </span>
       <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;overflow:hidden;">
         <img style="width: 100%;" class="img" ng-src="{{list.files[0].attachment}}" ng-if="list.files.length>0">
         <img style="width: 100%;" class="img" src="/static/images/ecommerce.jpg" ng-if="list.files==null">
@@ -70,25 +77,25 @@
             </div> -->
             <div style=" padding:10px 10px 10px 10px;margin:0px;height:60px" ng-if="list.added_cart==0&&me.pk&&list.in_stock=='true'">
               <div class="row">
-                <div class="col-xs-5" style="padding-right:0px;">
+                <div class="col-xs-7" style="padding-right:0px;">
                   <div class="input-group qtyInputGrp" ng-click="$event.stopPropagation();">
                     <span class="input-group-addon qtyBtn">Qty</span>
                     <input type="text" class="form-control qtyText" placeholder="Qty" ng-model="qtyToAddInit.qty">
                   </div>
                 </div>
-                <div class="col-xs-4" style="padding-left:10px;" ng-click="addToCart();$event.stopPropagation();">
+                <div class="col-xs-3" style="padding-left:10px;" ng-click="addToCart();$event.stopPropagation();">
                   <button type="button" class="btn btn-default" style="height:28px; background-color:#fce681; color:#000; border-radius:5px;"  >
                   Add <i class="fa fa-shopping-cart"></i>
                 </button>
                 </div>
-                <div class="col-xs-3">
+                <!-- <div class="col-xs-3">
                   <span ng-click="wishlist();$event.stopPropagation();" style="cursor:pointer;color:#808080;" ng-if="list.added_saved==0&&me.pk">
                     <i class="fa fa-heart  fa-2x"></i>
                   </span>
                   <span ng-click="wishlist();$event.stopPropagation();" style="cursor:pointer;color:rgb(228, 114, 114);" ng-if="list.added_saved>0&&me.pk">
                     <i class="fa fa-heart  fa-2x"></i>
                   </span>
-                </div>
+                </div> -->
               </div>
             </div>
             <div style=" padding:10px 10px 10px 10px;margin:0px;height:60px" ng-if="list.added_cart==0&&!me.pk&&list.in_stock=='true'">
