--- a/POS/static/ngTemplates/app.POS.product.form.html
+++ b/POS/static/ngTemplates/app.POS.product.form.html
@@ -10,14 +10,21 @@
         <input type="text" class="form-control" ng-model="product.name">
       </div>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-4">
           <div class="form-group">
             <label>MRP</label>
             <input type="number" min="0" class="form-control" ng-model="product.price">
           </div>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-4">
+          <div class="form-group">
+            <label>logistics</label>
+            <input type="number" min="0" class="form-control" ng-model="product.logistics">
+          </div>
+        </div>
+
+        <div class="col-md-4">
           <div class="form-group">
             <label>Cost</label>
             <input type="number" min="0" class="form-control" ng-model="product.cost">
@@ -44,12 +51,6 @@
 
         </div> -->
 
-        <div class="col-md-6">
-          <div class="form-group">
-            <label>logistics</label>
-            <input type="number" min="0" class="form-control" ng-model="product.logistics">
-          </div>
-        </div>
       </div>
 
       <div class="row">
@@ -71,8 +72,8 @@
         <label>Product Meta</label>
         <input type="text" class="form-control" ng-model="product.productMeta" uib-typeahead="meta as meta.description for meta in searchTaxCode($viewValue)" ng-if="!showTaxCodeDetails">
         <span ng-if="showTaxCodeDetails"> <button type="button" class="btn btn-default btn-sm" ng-click="product.productMeta = ''">
-          Edit <i class="fa fa-pencil"></i>
-        </button> <br> {{product.productMeta.description}} <br><strong>Code Type : </strong> {{product.productMeta.typ}} <br> <strong>Code : </strong> {{product.productMeta.code}} <br> <strong>Tax Rate :</strong>{{product.productMeta.taxRate}}</span>
+            Edit <i class="fa fa-pencil"></i>
+          </button> <br> {{product.productMeta.description}} <br><strong>Code Type : </strong> {{product.productMeta.typ}} <br> <strong>Code : </strong> {{product.productMeta.code}} <br> <strong>Tax Rate :</strong>{{product.productMeta.taxRate}}</span>
       </div>
 
       <div class="form-group">
@@ -98,10 +99,10 @@
     <div class="col-md-4">
 
       <div class="form-group">
-      <label>How Much</label>
-      <span class="text-muted" ng-if="product.unit">(in {{product.unit}})</span>
-      <input type="text" class="form-control"  ng-model="product.howMuch" >
-    </div>
+        <label>How Much</label>
+        <span class="text-muted" ng-if="product.unit">(in {{product.unit}})</span>
+        <input type="text" class="form-control" ng-model="product.howMuch">
+      </div>
 
       <div class="form-group">
         <label>Alias</label>
@@ -138,7 +139,7 @@
 
         <div class="row">
           <div class="col-md-6">
-              <label>Secondary SKU</label>
+            <label>Secondary SKU</label>
           </div>
           <div class="col-md-3" style="padding:0px">
             <p class="text-muted">Price</p>
@@ -157,7 +158,7 @@
           </div>
           <div class="col-md-3" style="padding:0px">
             <div class="form-group">
-              <input type="text" class="form-control" ng-model="productVerientForm.price" placeholder="price..." >
+              <input type="text" class="form-control" ng-model="productVerientForm.price" placeholder="price...">
             </div>
           </div>
           <div class="col-md-3">
@@ -181,12 +182,12 @@
           <div class="cards" style="border-left:4px solid #4192cd;box-shadow:0 2px 8px rgba(26,24,20,0.2);margin-top: 15px;" ng-repeat="data in productData">
             <div class="row" style="padding: 15px;min-height:100px;" ng-mouseenter="hover = true;" ng-mouseleave="hover = false;">
               <div class="col-md-12">
-                <span><strong>Secondary SKU:</strong>{{data.sku}}</span><br/>
-                <span><strong>Units / Pack:</strong>{{data.unitPerpack}}</span><br/>
+                <span><strong>Secondary SKU:</strong>{{data.sku}}</span><br />
+                <span><strong>Units / Pack:</strong>{{data.unitPerpack}}</span><br />
                 <span><strong>Price : </strong>{{data.price}}</span>
                 <!-- <a href="{{data.attachment}}" target="_blank" class="btn btn-primary pull-right" > <i class="fa fa-download" ></i></a> -->
-                <button type="button" mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="deleteProduct(data.pk , $index)" confirm-button-type="danger" cancel-button-type="default" class="btn-danger btn-sm  pull-right"
-                  style="padding-bottom: 9px;"> <i class="fa fa-trash fa-lg"></i> </button>
+                <button type="button" mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="deleteProduct(data.pk , $index)" confirm-button-type="danger" cancel-button-type="default"
+                  class="btn-danger btn-sm  pull-right" style="padding-bottom: 9px;"> <i class="fa fa-trash fa-lg"></i> </button>
               </div>
             </div>
           </div>
@@ -216,12 +217,13 @@
             <div class="cards" style="border-left:4px solid #4192cd;box-shadow:0 2px 8px rgba(26,24,20,0.2);margin-top:15px;" ng-repeat="c in product.storeQty">
               <div class="row" style="padding:15px;font-size:17px">
                 <div class="col-md-10">
-                  <span><strong>Name : </strong> {{c.store.name}}</span><br/>
+                  <span><strong>Name : </strong> {{c.store.name}}</span><br />
                   <span><strong>Quantity : </strong> {{c.quantity}}</span>
                 </div>
                 <div class="col-md-2 text-right">
                   <i class="fa fa-pencil fa-lg" ng-click="editStore($index)" style="cursor:pointer"></i><br>
-                  <i class="fa fa-trash fa-lg" style="cursor:pointer;margin-top:10px" mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="deleteStore(c.pk , $index)" confirm-button-type="danger" cancel-button-type="default"></i>
+                  <i class="fa fa-trash fa-lg" style="cursor:pointer;margin-top:10px" mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="deleteStore(c.pk , $index)"
+                    confirm-button-type="danger" cancel-button-type="default"></i>
                 </div>
                 <!-- <button type="button" mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="deleteStore(c.pk , $index)" confirm-button-type="danger" cancel-button-type="default" class="btn-danger btn-sm  pull-right"
                 style="padding-bottom: 9px;margin-top:16px;margin-right:12px"> <i class="fa fa-trash fa-lg"></i> </button> -->
@@ -250,7 +252,7 @@
         <div class="cards" style="border-left:4px solid #4192cd;box-shadow:0 2px 8px rgba(26,24,20,0.2);margin-top:15px;" ng-repeat="c in categoriesList">
           <div class="row" style="padding:15px">
             <div class="col-md-11">
-              <span><strong>Name : </strong> {{c.category.name}}</span><br/><br/>
+              <span><strong>Name : </strong> {{c.category.name}}</span><br /><br />
               <span><strong>Quantity : </strong> {{c.qty}}</span>
             </div>
             <div class="col-md-1">
