--- a/productsInventory/static/ngTemplates/app.productsInventory.default.html
+++ b/productsInventory/static/ngTemplates/app.productsInventory.default.html
@@ -57,10 +57,10 @@
           <div class="col-md-2">
             <span style="font-size:18px"><strong> Discount : </strong>{{pi.productDiscount}}% </span>
           </div>
-          <!-- <div class="col-md-2 text-right">
+          <div class="col-md-2 text-right">
           <i class="fa fa-pencil fa-2x"></i> &nbsp;&nbsp;
           <i class="fa fa-info fa-2x"></i>
-        </div> -->
+        </div>
         <!-- <div class="col-md-3 text-center">
           <h4>{{pi.quantity}}</h4>
         </div> -->
