--- a/ecommerce/static/ngTemplates/app.ecommerce.footer.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.footer.html
@@ -211,7 +211,7 @@
 
   </div>
   <hr/>
-  <div class="row">
+  <!-- <div class="row">
     <div class="col-md-2 col-md-offset-1  col-xs-12 col-sm-12 ">
     <span style="font-size:18px;color:var(--themeColor)">POPULAR SEARCHES</span>
     </div>
@@ -219,7 +219,7 @@
     <span><b>Idli Rice, toor Dal, Almonds, Raw Rice, Whole Wheat Atta, Maida, Ragi Flour, Uppit Sooji, Cashew, Jeera, Black Pepper & Seeds</b></span>
     </div>
   </div>
-  <hr/>
+  <hr/> -->
   <div class="row" style="padding-top:15px">
     <div class=" col-md-offset-1 col-md-10 hidden-sm hidden-xs">
       <div class="row">
