--- a/ecommerce/static/ngTemplates/app.ecommerce.list.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.list.html
@@ -71,7 +71,7 @@
 <div class="row" style="margin:0px">
   <div class="col-md-offset-2 col-md-8 hidden-xs hidden-sm" style="padding-left:20px;padding-right:40px;">
     <div class="row" ng-if="subSlide.banners.length > 0&&secondBanner">
-      <div style="height:43vh;margin-left:10px;padding-left:0px;padding-right:0px;overflow:hidden;padding:0px;" class="col-md-12 text-center  hidden-xs hidden-sm">
+      <div style="margin-bottom:10px;;margin-left:10px;padding-left:0px;padding-right:0px;overflow:hidden;padding:0px;" class="col-md-12 text-center  hidden-xs hidden-sm">
         <img class="anim-in-out anim-fade" data-anim-speed="100" style="width:100%;cursor:pointer;" ng-src="{{subSlide.img}}" ng-click="$state.go('pages' , {title : subSlide.title.split(' ').join('-').toLowerCase()})" />
       </div>
     </div>
