--- a/POS/static/ngTemplates/app.POS.product.form.html
+++ b/POS/static/ngTemplates/app.POS.product.form.html
@@ -25,16 +25,6 @@
         </div>
       </div>
 
-      <div class="form-group">
-        <label>Display Picture</label>
-        <input type="file" name="pic" accept="image/*" file-model="product.displayPicture">
-      </div>
-
-      <div class="form-group">
-        <label>SKU</label>
-        <input type="tel" class="form-control" ng-model="product.serialNo">
-      </div>
-
       <div class="row">
         <!-- <div class="col-md-6">
           <div class="form-group">
@@ -50,7 +40,30 @@
             <input type="number" min="0" class="form-control" ng-model="product.logistics">
           </div>
         </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <label>Discount Offered</label>
+            <span class="text-muted">(in %)</span>
+            <input type="number" class="form-control" min="0" ng-model="product.discount">
+          </div>
+        </div>
       </div>
+
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <label>Display Picture</label>
+            <input type="file" name="pic" accept="image/*" file-model="product.displayPicture">
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <label>SKU</label>
+            <input type="tel" class="form-control" ng-model="product.serialNo">
+          </div>
+        </div>
+      </div>
+
 
       <div class="row">
         <div class="col-md-6">
@@ -75,33 +88,33 @@
         </button> <br> {{product.productMeta.description}} <br><strong>Code Type : </strong> {{product.productMeta.typ}} <br> <strong>Code : </strong> {{product.productMeta.code}} <br> <strong>Tax Rate :</strong>{{product.productMeta.taxRate}}</span>
       </div>
 
-      <div class="form-group">
-        <label>Discount Offered</label>
-        <span class="text-muted">(in %)</span>
-        <input type="number" class="form-control" min="0" ng-model="product.discount">
-      </div>
-
-      <div class="form-group">
-        <label>Unit Type</label>
-        <select class="form-control" ng-model="product.unit">
-          <option value="Ton">Ton</option>
-          <option value="Kilogram">Kilogram</option>
-          <option value="Gram">Gram</option>
-          <option value="Litre">Litre</option>
-          <option value="Millilitre">Millilitre</option>
-          <option value="Quantity">Quantity</option>
-        </select>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <label>Unit Type</label>
+            <select class="form-control" ng-model="product.unit">
+              <option value="Ton">Ton</option>
+              <option value="Kilogram">Kilogram</option>
+              <option value="Gram">Gram</option>
+              <option value="Litre">Litre</option>
+              <option value="Millilitre">Millilitre</option>
+              <option value="Quantity">Quantity</option>
+            </select>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <label>How Much</label>
+            <span class="text-muted" ng-if="product.unit">(in {{product.unit}})</span>
+            <input type="text" class="form-control" ng-model="product.howMuch">
+          </div>
+        </div>
       </div>
 
 
     </div>
+
     <div class="col-md-4">
-
-      <div class="form-group">
-      <label>How Much</label>
-      <span class="text-muted" ng-if="product.unit">(in {{product.unit}})</span>
-      <input type="text" class="form-control"  ng-model="product.howMuch" >
-    </div>
 
       <div class="form-group">
         <label>Alias</label>
@@ -137,10 +150,13 @@
 
 
         <div class="row">
-          <div class="col-md-6">
-              <label>Secondary SKU</label>
+          <div class="col-md-4">
+            <label>Secondary SKU</label>
           </div>
-          <div class="col-md-3" style="padding:0px">
+          <div class="col-md-3" style="padding-left:0px">
+            <p class="text-muted">Serial Id:</p>
+          </div>
+          <div class="col-md-2" style="padding:0px">
             <p class="text-muted">Price</p>
           </div>
           <div class="col-md-3">
@@ -148,16 +164,20 @@
           </div>
         </div>
 
-
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-4">
             <div class="form-group">
               <input type="text" class="form-control" ng-model="productVerientForm.sku" placeholder="product variant...">
             </div>
           </div>
-          <div class="col-md-3" style="padding:0px">
+          <div class="col-md-3" style="padding-left:0px">
             <div class="form-group">
-              <input type="text" class="form-control" ng-model="productVerientForm.price" placeholder="price..." >
+              <input type="text" class="form-control" ng-model="productVerientForm.serialId" placeholder="Serial Id">
+            </div>
+          </div>
+          <div class="col-md-2" style="padding:0px">
+            <div class="form-group">
+              <input type="text" class="form-control" ng-model="productVerientForm.price" placeholder="price">
             </div>
           </div>
           <div class="col-md-3">
@@ -182,6 +202,7 @@
             <div class="row" style="padding: 15px;min-height:100px;" ng-mouseenter="hover = true;" ng-mouseleave="hover = false;">
               <div class="col-md-12">
                 <span><strong>Secondary SKU:</strong>{{data.sku}}</span><br/>
+                <span><strong>Serial Id : </strong>{{data.serialId}}</span><br/>
                 <span><strong>Units / Pack:</strong>{{data.unitPerpack}}</span><br/>
                 <span><strong>Price : </strong>{{data.price}}</span>
                 <!-- <a href="{{data.attachment}}" target="_blank" class="btn btn-primary pull-right" > <i class="fa fa-download" ></i></a> -->
@@ -193,7 +214,8 @@
         </div>
 
       </div>
-      <div class="row" ng-if="multiStores">
+
+      <!-- <div class="row" ng-if="multiStores">
         <div class="col-md-12">
           <label>Store</label>
           <div class="row">
@@ -221,16 +243,18 @@
                 </div>
                 <div class="col-md-2 text-right">
                   <i class="fa fa-pencil fa-lg" ng-click="editStore($index)" style="cursor:pointer"></i><br>
-                  <i class="fa fa-trash fa-lg" style="cursor:pointer;margin-top:10px" mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="deleteStore(c.pk , $index)" confirm-button-type="danger" cancel-button-type="default"></i>
+                  <i class="fa fa-trash fa-lg" style="cursor:pointer;margin-top:10px" mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="deleteStore(c.pk , $index)" confirm-button-type="danger"
+                    cancel-button-type="default"></i>
                 </div>
-                <!-- <button type="button" mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="deleteStore(c.pk , $index)" confirm-button-type="danger" cancel-button-type="default" class="btn-danger btn-sm  pull-right"
-                style="padding-bottom: 9px;margin-top:16px;margin-right:12px"> <i class="fa fa-trash fa-lg"></i> </button> -->
+
               </div>
             </div>
           </div>
         </div>
 
-      </div>
+      </div> -->
+
+
     </div>
 
     <div class="col-md-4" ng-if="product.pk">
