--- a/ecommerce/static/ngTemplates/app.ecommerce.categories.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.categories.html
@@ -77,8 +77,8 @@
           <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('categories' , {name : r.name.split(' ').join('_')})">
             <div class="row">
                 <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
-              <img style="width: 100%; height:120px;" class="img" ng-src="{{r.visual}}" >
-              <img style="width: 100%; height:120px;" class="img" src="/static/images/ecommerce.jpg" ng-if="r.visual==null">
+              <img style="width: 100%;" class="img" ng-src="{{r.visual}}" >
+              <img style="width: 100%;" class="img" src="/static/images/ecommerce.jpg" ng-if="r.visual==null">
             </div>
           </div>
             <div class="row container-fluid" style="padding:0px;margin-bottom:10px">
@@ -458,8 +458,8 @@
         <div class="container-fluid" style="cursor:pointer;" ng-click="$state.go('categories' , {name : r.name.split(' ').join('_')})">
           <div class="row">
               <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
-            <img style="width: 100%; height:120px;" class="img" ng-src="{{r.visual}}" >
-            <img style="width: 100%; height:120px;" class="img" src="/static/images/ecommerce.jpg" ng-if="r.visual==null">
+            <img style="width: 100%;" class="img" ng-src="{{r.visual}}" >
+            <img style="width: 100%;" class="img" src="/static/images/ecommerce.jpg" ng-if="r.visual==null">
           </div>
         </div>
           <div class="row container-fluid" style="padding:0px;margin-bottom:10px">
