--- a/warehouse/static/ngTemplates/app.warehouse.default.html
+++ b/warehouse/static/ngTemplates/app.warehouse.default.html
@@ -44,14 +44,14 @@
   </div> -->
 
   <div class="row" style="margin:15px">
-    <div class="form-group">
+    <!-- <div class="form-group">
       <input type="text" class="form-control" placeholder="Filter By Company Name..." ng-model="serchField">
-    </div>
-    <div class="row" style="margin:20px">
+    </div> -->
+    <!-- <div class="row" style="margin:20px">
       <button type="button" class="btn btn-default bgn-lg pull-right" ng-click="send()">
         <i class="fa fa-plus"></i> Generate
       </button>
-    </div>
+    </div> -->
     <div class="row" style="margin:20px" ng-if="invData.length==0">
       <span class="text-center text-muted">
         <h2>No Invoices...</h2><br>
