changes in product invoice

--- a/POS/static/ngTemplates/app.POS.product.item.html
+++ b/POS/static/ngTemplates/app.POS.product.item.html
@@ -8,7 +8,7 @@
       <div class="col-md-8" style="margin-top:10px;">
 
         <div class="row" style="padding-left:10px;">
-            <h3 style="font-size: 18px;">{{data.name}} {{posProductDel}}</span> <span style="font-size: 18px;" ng-if="data.skuUnitpack"> Pack of {{data.skuUnitpack}} </h3>
+            <span style="font-size: 18px;"> <strong>{{data.name}} {{posProductDel}}</strong> </span> <span style="font-size: 18px;" ng-if="data.skuUnitpack"> Pack of {{data.skuUnitpack}} </span>
         </div>
         <div class="row">
           <div class="col-md-7" style="padding-right:0px;">
