--- a/POS/static/ngTemplates/app.POS.invoices.html
+++ b/POS/static/ngTemplates/app.POS.invoices.html
@@ -208,25 +208,34 @@
         <input type="text" class="form-control-pos"  ng-model="item.data" uib-typeahead="p as p.name for p in productSearch($viewValue)" style="font-size:{{posShowAll?'17px':'25px'}}">
       </td>
       <td ng-if="posShowAll">
-          <span ng-if="item.data.pk">{{item.data.productMeta.typ == 'SAC'? 'Service' : 'Product'}}</span>
+          <span ng-if="item.data.pk">{{item.data.product.productMeta.typ == 'SAC'? 'Service' : 'Product'}}</span>
       </td>
       <td ng-if="posShowAll">
-        <span ng-if="item.data.pk">{{item.data.productMeta.code}} ( {{item.data.productMeta.taxRate}} %)</span>
+        <span ng-if="item.data.pk">{{item.data.product.productMeta.code}} ( {{item.data.product.productMeta.taxRate}} %)</span>
       </td>
       <td>
         <input type="number" class="form-control-pos" ng-model="item.quantity" ng-if="item.data.pk" style="font-size:{{posShowAll?'17px':'35px'}};text-align: center;height:40px" min="1">
       </td>
       <td>
-        <input type="float" class="form-control-pos" ng-model="item.data.product.price" ng-if="item.data.pk&&posShowAll" style="font-size:17px;text-align: center;">
-        <input type="float" class="form-control-pos" value="{{item.data.productVariant!=null?item.data.productVariant.discountedPrice:item.data.product.price}}" ng-if="item.data.pk&&!posShowAll" style="font-size:35px;text-align: center;" >
+        <input type="float" class="form-control-pos" value="{{item.data.productVariant!=null?item.data.productVariant.price:item.data.product.price}}" ng-if="item.data.pk&&posShowAll" style="font-size:17px;text-align: center;">
+        <input type="float" class="form-control-pos" value="{{item.data.productVariant!=null?item.data.productVariant.price:item.data.product.price}}" ng-if="item.data.pk&&!posShowAll" style="font-size:35px;text-align: center;" >
         <!-- {{item.data.product.price}} -->
       </td>
       <td ng-if="posShowAll">
-        <span ng-if="item.data.pk">{{item.data.productMeta!= none?item.quantity*(item.data.productMeta.taxRate*item.data.price/100).toFixed(2):0}}</span>
+        <!-- <span ng-if="item.data.pk">{{item.data.productMeta!= none?item.quantity*(item.data.productMeta.taxRate*item.data.price/100).toFixed(2):0}}</span>
+        <span ng-if="item.data.pk">{{item.data.productMeta!= none?item.quantity*(item.data.productMeta.taxRate*item.data.price/100).toFixed(2):0}}</span> -->
+        <!-- {{item.data.product.productMeta!= none?item.quantity*(item.data.product.productMeta.taxRate * item.data.prod.productVariant.price / 100)}} -->
+
+        <span ng-if="item.data.pk&&item.data.productVariant!=null"> {{item.data.product.productMeta ? (item.quantity * (item.data.product.productMeta.taxRate * item.data.productVariant.price / 100)).toFixed(2) : 0}}</span>
+
+        <span ng-if="item.data.pk&&item.data.productVariant==null"> {{item.data.product.productMeta ? (item.quantity * (item.data.product.productMeta.taxRate * item.data.product.price / 100)).toFixed(2) : 0}}</span>
+
 
       </td>
       <td>
-        <span ng-if="item.data.pk">{{(item.quantity * (item.data.productVariant!=null?item.data.productVariant.discountedPrice:item.data.product.price)).toFixed(2)}}</span>
+        <span ng-if="item.data.pk&&item.data.productVariant!=null">{{ ((item.quantity * item.data.productVariant.price) +  (item.data.product.productMeta ? (item.quantity * (item.data.product.productMeta.taxRate * item.data.productVariant.price / 100)) : 0)) }}</span>
+        
+        <span ng-if="item.data.pk&&item.data.productVariant==null">{{ ((item.quantity * item.data.product.price) +  (item.data.product.productMeta ? (item.quantity * (item.data.product.productMeta.taxRate * item.data.product.price / 100)) : 0)).toFixed(2) }}</span>
 
       </td>
       <td>
